moving yaml files into kustomize format (#83)
* moving yaml files into kuztomize format

* moving yaml files into kuztomize format

* ignore .gradle

* IdentityURL changed into AuthUrl

* codeql autobuild disabled and used custom build scripts

* order-api workflow upload artificat only when push to develop

* CVE-2020-26160

* Virtual Services and Istio gateways migrated into Kubernetes Gateway API  resources

--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -19,7 +19,7 @@ on:
 env:
   SERVICE_NAME: basket.api
   ARTIFACT_NAME: basket-api-artifact
-  IMAGE_NAME: basket
+  IMAGE_NAME: basket-api
 
 jobs:
   build:
